GNOME Bugzilla – Bug 658562
Fix handling a11y settings
Last modified: 2011-09-09 09:26:29 UTC
Somebody changed the type of the atk-bridge-location key from s to ay. Without telling interested parties :-(
Created attachment 195988 [details] [review] Fix handling a11y settings
Created attachment 195993 [details] [review] Fix up a11y settings handling Somebody changed the type of the atk-bridge-location key from s to ay. Without telling affected parties :-(
*** Bug 658459 has been marked as a duplicate of this bug. ***
The following fix has been pushed: 5b39b87 Fix up a11y settings handling
Created attachment 196048 [details] [review] Fix up a11y settings handling Somebody changed the type of the atk-bridge-location key from s to ay. Without telling affected parties :-(
Finally, as I said on bug 658459 comment 3 I was able to test it (sorry for the delay, some compiling issues). Patch committed by Mathias solves the issue. Bridge is properly loaded and orca reacts to gnome-shell events.